B 5 (#181)
* Moar cleanup

Mostly lambda cleanup, but a few minor bugs as well.

* split out verifiers from Parameters to allow de/serialization

* missed

* Configure DHT URL template, rather than hard-wire

* Configure DHT URL template, rather than hard-wire

* add encryption caps, expand keystore to alias storage :(

moar cleanup

* add Key Encapsulation Method to EncryptionAlgorithm

moar cleanup

* forgot about the algo diff.

Weird asymmetry

* error messages

* add context interceptor and provide bootstrapping

* further cleanup of notes/certs/validations

Fallout from the addition of event sequence to signature.  No longer need event coordinates, just the identifier.

* better error handling/logging for KerlDHT.

* bootstrap optimization for context majority

* far better logging.  add support for getKeyState(id, seq)

* ugh.  forgot this

* implement getKS(id, seq) - wow. Gate with empty check on reconcile.

* bootstrapping accommodations. use diadem's cardinality, rather than context bft normalized cardinality. Ring* handle no members

* moar bootstrapping accommodations.  "up to 4"