@@ -23,8 +23,8 @@ import com.salesforce.apollo.fireflies.View.Seed;
 import com.salesforce.apollo.membership.Context;
 import com.salesforce.apollo.membership.ContextImpl;
 import com.salesforce.apollo.membership.stereotomy.ControlledIdentifierMember;
-import com.salesforce.apollo.stereotomy.EventCoordinates;
 import com.salesforce.apollo.stereotomy.StereotomyImpl;
+import com.salesforce.apollo.stereotomy.identifier.SelfAddressingIdentifier;
 import com.salesforce.apollo.stereotomy.mem.MemKERL;
 import com.salesforce.apollo.stereotomy.mem.MemKeyStore;
 import com.salesforce.apollo.utils.Entropy;
@@ -86,9 +86,10 @@ public class FireFliesTest {
             var context = new ContextImpl<>(DigestAlgorithm.DEFAULT.getLast(), CARDINALITY, 0.2, 3);
             final var member = new ControlledIdentifierMember(id);
             var localRouter = new LocalServer(prefix, member).router(ServerConnectionCache.newBuilder().setTarget(30));
-            var dbUrl = String.format("jdbc:h2:mem:%s-%s;DB_CLOSE_DELAY=-1", member.getId(), UUID.randomUUID());
-            var pdParams = new ProcessDomain.ProcessDomainParameters(dbUrl, Duration.ofSeconds(5), checkpointDirBase,
-                                                                     Duration.ofMillis(10), 0.00125,
+            var dbUrl = String.format("jdbc:h2:mem:sql-%s-%s;DB_CLOSE_DELAY=-1", member.getId(), UUID.randomUUID());
+            var pdParams = new ProcessDomain.ProcessDomainParameters(dbUrl, Duration.ofSeconds(5),
+                                                                     "jdbc:h2:mem:%s-state".formatted(digest),
+                                                                     checkpointDirBase, Duration.ofMillis(10), 0.00125,
                                                                      Duration.ofSeconds(5), 3, 10, 0.1);
             var node = new ProcessDomain(group, member, pdParams, params, RuntimeParameters.newBuilder()
                                                                                            .setFoundation(sealed)
@@ -108,22 +109,20 @@ public class FireFliesTest {
         long then = System.currentTimeMillis();
         final var countdown = new CountDownLatch(domains.size());
         final var seeds = Collections.singletonList(
-        new Seed(domains.getFirst().getMember().getEvent(), new InetSocketAddress(0)));
+        new Seed(domains.getFirst().getMember().getIdentifier().getIdentifier(), new InetSocketAddress(0)));
         domains.forEach(d -> {
             var listener = new View.ViewLifecycleListener() {
 
                 @Override
-                public void viewChange(Context<Participant> context, Digest viewId, List<EventCoordinates> joins,
-                                       List<Digest> leaves) {
+                public void viewChange(Context<Participant> context, Digest viewId,
+                                       List<SelfAddressingIdentifier> joins, List<Digest> leaves) {
                     if (context.totalCount() == CARDINALITY) {
-                        System.out.println(
-                        String.format("Full view: %s members: %s on: %s", viewId, context.totalCount(),
-                                      d.getMember().getId()));
+                        System.out.printf("Full view: %s members: %s on: %s%n", viewId, context.totalCount(),
+                                          d.getMember().getId());
                         countdown.countDown();
                     } else {
-                        System.out.println(
-                        String.format("Members joining: %s members: %s on: %s", viewId, context.totalCount(),
-                                      d.getMember().getId()));
+                        System.out.printf("Members joining: %s members: %s on: %s%n", viewId, context.totalCount(),
+                                          d.getMember().getId());
                     }
                 }
             };
