@@ -35,7 +35,7 @@ import static java.util.Collections.disjoint;
  * @author hal.hildebrand
  */
 public interface Validator {
-    static final Logger log = LoggerFactory.getLogger(Validator.class);
+    Logger log = LoggerFactory.getLogger(Validator.class);
 
     static <T> boolean distinct(Collection<T> items) {
         if (items instanceof Set) {
@@ -58,12 +58,13 @@ public interface Validator {
             log.debug("Identifier: {} not found in KeyState", identifier);
             return false;
         }
-        for (KeyEvent lee = kel.getKeyEvent(currentState.getLastEstablishmentEvent()); lee != null; lee = kel.getKeyEvent(lee.getPrevious())) {
+        for (KeyEvent lee = kel.getKeyEvent(currentState.getLastEstablishmentEvent()); lee != null;
+        lee = kel.getKeyEvent(lee.getPrevious())) {
             var lastEstablishment = (EstablishmentEvent) lee;
             lastEstablishment.getKeys();
 
             if (new DefaultVerifier(lastEstablishment.getKeys()).verify(lastEstablishment.getSigningThreshold(),
-                    signature, message)) {
+                                                                        signature, message)) {
                 return true;
             }
         }
@@ -76,51 +77,51 @@ public interface Validator {
             validateKeyConfiguration(ee);
 
             validate(ee.getIdentifier().isTransferable() || ee.getNextKeysDigest().isEmpty(),
-                    "non-transferable prefix must not have a next key configuration");
+                     "non-transferable prefix must not have a next key configuration");
 
             if (event instanceof InceptionEvent icp) {
                 validate(icp.getSequenceNumber().equals(ULong.valueOf(0)),
-                        "inception events must have a sequence number of 0");
+                         "inception events must have a sequence number of 0");
                 validateIdentifier(icp);
                 validateInceptionWitnesses(icp);
             } else if (event instanceof RotationEvent rot) {
                 validate(!(state.isDelegated()) || rot instanceof DelegatedRotationEvent,
-                        "delegated identifiers must use delegated rotation event type");
+                         "delegated identifiers must use delegated rotation event type");
 
                 validate(rot.getSequenceNumber().compareTo(ULong.valueOf(0)) > 0,
-                        "non-inception event must have a sequence number greater than 0 (s: %s)",
-                        rot.getSequenceNumber());
+                         "non-inception event must have a sequence number greater than 0 (s: %s)",
+                         rot.getSequenceNumber());
 
                 validate(event.getIdentifier().isTransferable(),
-                        "only transferable identifiers can have rotation events");
+                         "only transferable identifiers can have rotation events");
 
                 KeyEvent lookup;
                 lookup = kel.getKeyEvent(state.getLastEstablishmentEvent());
                 if (lookup == null) {
-                    throw new InvalidKeyEventException(String.format("previous establishment event does not exist"));
+                    throw new InvalidKeyEventException("previous establishment event does not exist");
                 }
                 EstablishmentEvent lastEstablishmentEvent = (EstablishmentEvent) lookup;
                 validate(lastEstablishmentEvent.getNextKeysDigest().isPresent(),
-                        "previous establishment event must have a next key configuration for rotation");
+                         "previous establishment event must have a next key configuration for rotation");
 
                 var nextKeyConfigurationDigest = lastEstablishmentEvent.getNextKeysDigest().get();
-                validate(KeyConfigurationDigester.matches(rot.getSigningThreshold(), rot.getKeys(),
-                                nextKeyConfigurationDigest),
-                        "digest of signing threshold and keys must match digest in previous establishment event");
+                validate(
+                KeyConfigurationDigester.matches(rot.getSigningThreshold(), rot.getKeys(), nextKeyConfigurationDigest),
+                "digest of signing threshold and keys must match digest in previous establishment event");
 
                 validateRotationWitnesses(rot, state);
             }
 
             if (event instanceof DelegatedInceptionEvent dee) {
                 validate(dee.getDelegatingPrefix() != null,
-                        "delegated establishment event must contain referenced delegating identifier");
+                         "delegated establishment event must contain referenced delegating identifier");
             }
         } else if (event instanceof InteractionEvent ixn) {
             validate(ixn.getSequenceNumber().compareTo(ULong.valueOf(0)) > 0,
-                    "non-inception event must have a sequence number greater than 0 (s: %s)", ixn.getSequenceNumber());
+                     "non-inception event must have a sequence number greater than 0 (s: %s)", ixn.getSequenceNumber());
 
             validate(!state.configurationTraits().contains(ConfigurationTrait.ESTABLISHMENT_EVENTS_ONLY),
-                    "interaction events only permitted when identifier is not configured for establishment events only");
+                     "interaction events only permitted when identifier is not configured for establishment events only");
         }
     }
 
@@ -134,22 +135,22 @@ public interface Validator {
         if (event.getIdentifier() instanceof BasicIdentifier bi) {
             validate(event.getKeys().size() == 1, "basic identifiers can only have a single key");
 
-            validate(bi.getPublicKey().equals(event.getKeys().get(0)), "basic identifier key must match event key");
+            validate(bi.getPublicKey().equals(event.getKeys().getFirst()), "basic identifier key must match event key");
 
         } else if (event.getIdentifier() instanceof SelfAddressingIdentifier sap) {
             var digest = sap.getDigest().getAlgorithm().digest(event.getInceptionStatement());
 
             validate(sap.getDigest().equals(digest),
-                    "self-addressing identifier digests must match digest of inception statement");
+                     "self-addressing identifier digests must match digest of inception statement");
 
         } else if (event.getIdentifier() instanceof SelfSigningIdentifier ssp) {
             validate(event.getKeys().size() == 1, "self-signing identifiers can only have a single key");
 
-            var ops = SignatureAlgorithm.lookup(event.getKeys().get(0));
+            var ops = SignatureAlgorithm.lookup(event.getKeys().getFirst());
             new DefaultVerifier(event.getKeys()).verify(event.getSigningThreshold(), ssp.getSignature(),
-                    event.getInceptionStatement());
-            validate(ops.verify(event.getKeys().get(0), ssp.getSignature(), event.getInceptionStatement()),
-                    "self-signing prefix signature must verify against inception statement");
+                                                        event.getInceptionStatement());
+            validate(ops.verify(event.getKeys().getFirst(), ssp.getSignature(), event.getInceptionStatement()),
+                     "self-signing prefix signature must verify against inception statement");
 
         } else {
             throw new IllegalArgumentException("Unknown prefix type: " + event.getIdentifier().getClass());
@@ -163,12 +164,12 @@ public interface Validator {
             validate(distinct(icp.getWitnesses()), "witness set must not have duplicates");
 
             validate(icp.getWitnessThreshold() > 0,
-                    "witness threshold must be greater than 0 if witnesses are provided (given: threshold: %s, witnesses: %s",
-                    icp.getWitnessThreshold(), icp.getWitnesses().size());
+                     "witness threshold must be greater than 0 if witnesses are provided (given: threshold: %s, witnesses: %s",
+                     icp.getWitnessThreshold(), icp.getWitnesses().size());
 
             validate(icp.getWitnessThreshold() <= icp.getWitnesses().size(),
-                    "witness threshold must be less than or equal to the number of witnesses (given: threshold: %s, witnesses: %s",
-                    icp.getWitnessThreshold(), icp.getWitnesses().size());
+                     "witness threshold must be less than or equal to the number of witnesses (given: threshold: %s, witnesses: %s",
+                     icp.getWitnessThreshold(), icp.getWitnesses().size());
         }
     }
 
@@ -177,12 +178,11 @@ public interface Validator {
 
         if (ee.getSigningThreshold() instanceof SigningThreshold.Unweighted) {
             validate(ee.getKeys().size() >= ((SigningThreshold.Unweighted) ee.getSigningThreshold()).getThreshold(),
-                    "unweighted signing threshold must be less than or equals to the number of keys");
-        } else if (ee.getSigningThreshold() instanceof SigningThreshold.Weighted) {
-            var weightedThreshold = ((SigningThreshold.Weighted) ee.getSigningThreshold());
+                     "unweighted signing threshold must be less than or equals to the number of keys");
+        } else if (ee.getSigningThreshold() instanceof SigningThreshold.Weighted weightedThreshold) {
             var countOfWeights = SigningThreshold.countWeights(weightedThreshold.getWeights());
             validate(ee.getKeys().size() == countOfWeights,
-                    "weighted signing threshold must specify a weight for each key");
+                     "weighted signing threshold must specify a weight for each key");
         }
     }
 
@@ -192,13 +192,13 @@ public interface Validator {
         validate(distinct(rot.getWitnessesRemovedList()), "added witnesses must not have duplicates");
 
         validate(state.getWitnesses().containsAll(rot.getWitnessesRemovedList()),
-                "removed witnesses must be present witness list");
+                 "removed witnesses must be present witness list");
 
         validate(disjoint(rot.getWitnessesAddedList(), rot.getWitnessesRemovedList()),
-                "added and removed witnesses must be mutually exclusive");
+                 "added and removed witnesses must be mutually exclusive");
 
         validate(disjoint(rot.getWitnessesAddedList(), state.getWitnesses()),
-                "added witnesses must not already be present in witness list");
+                 "added witnesses must not already be present in witness list");
 
         var newWitnesses = new ArrayList<>(state.getWitnesses());
         newWitnesses.removeAll(rot.getWitnessesRemovedList());
@@ -210,8 +210,8 @@ public interface Validator {
             validate(rot.getWitnessThreshold() == 0, "witness threshold must be 0 if no witnesses are specified");
         } else {
             validate(rot.getWitnessThreshold() <= newWitnesses.size(),
-                    "witness threshold must be less than or equal to the number of witnesses "
-                            + "(threshold: %s, witnesses: %s)", rot.getWitnessThreshold(), newWitnesses.size());
+                     "witness threshold must be less than or equal to the number of witnesses "
+                     + "(threshold: %s, witnesses: %s)", rot.getWitnessThreshold(), newWitnesses.size());
         }
     }
 }
